# LogicMate-v3

./: .gitignore  README.md  pyproject.toml  setup.sh
src/logicmate/: __init__.py  api.py  main.py
src/logicmate/bot/: controller.py
src/logicmate/models/: __init__.py
src/logicmate/models/ia/dino/: dino.py
src/logicmate/models/ia/gemma/: gemma.py
src/logicmate/models/ia/openai/: openai.py
src/logicmate/models/ia/phi/: phi.py
src/logicmate/models/ia/pyscenedetect/: psycenedetect.py
src/logicmate/models/ia/surya/: surya.py
src/logicmate/models/ia/yolo/code_detector/: code_detector.py
src/logicmate/models/ia/yolo/code_diagram_detector/: code_diagram_detector.py
src/logicmate/models/ia/yolo/diagram_type_detector/: diagram_type_detector.py
src/logicmate/models/ia/yolo/drawio_detector/: drawio_detector.py
src/logicmate/models/ia/yolo/flowgorithm_detector/: flowgorithim_detector.py
src/logicmate/models/ia/yolo/yolo/: yolo.py
src/logicmate/models/predictions/: __init__.py
src/logicmate/models/predictions/code_predictions/: code_predictions.py
src/logicmate/models/predictions/drawio_predictions/: drawio_predictions.py
src/logicmate/models/predictions/flowgorithm_predictions/: flowgorithm_predictions.py
src/logicmate/models/predictions/predictions/: prediction.py
src/logicmate/models/video/: __init__.py  video.py
src/logicmate/utils/: __init__.py
src/logicmate/utils/directory/: directory.py
src/logicmate/utils/env/: env.py
src/logicmate/utils/file/: file.py
